# kagura

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.config/: example.yml
