[project]
name = "kagura"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kagura-soc Project", email = "contact@kagura.social"},
]
dependencies = [
    "apsig>=0.1.2", 
    "fastapi>=0.115.5", 
    "granian>=1.6.3", 
    "orjson>=3.10.11", 
    "taskiq>=0.11.7", 
    "piccolo>=1.22.0", 
    "psqlpy-piccolo>=0.1.7", 
    "omegaconf>=2.3.0", 
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "AGPL-3.0-only"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
install = "python scripts/install.py"
start = "python packages/backend/server.py"
build = "cd packages/frontend && npm run build"
dev = "python scripts/dev.py"
"piccolo:migrate".shell = "cd packages/backend && piccolo migrations new kagura --auto"